--- a/404.html
+++ b/404.html
@@ -8,9 +8,9 @@
   <meta name="color-scheme" content="light dark">
   
   <title>404</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="https://johnmaxrin.github.io/johnmaxrin/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://johnmaxrin.github.io/johnmaxrin/img/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://johnmaxrin.github.io/johnmaxrin/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://johnmaxrin.github.io/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://johnmaxrin.github.io/img/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://johnmaxrin.github.io/img/apple-touch-icon.png">
   
   <style>
 
@@ -72,7 +72,7 @@
 
 </style>
 
-  <link rel="stylesheet" href="https://johnmaxrin.github.io/johnmaxrin/main.css">
+  <link rel="stylesheet" href="https://johnmaxrin.github.io/main.css">
   
   
 </head>
@@ -85,7 +85,7 @@
     if ((theme && theme == 'dark') || (!theme && match)) {
       document.body.classList.add('dark');
       const hl = document.querySelector('link#hl');
-      if (hl) hl.href = 'https://johnmaxrin.github.io/johnmaxrin/hl-dark.css';
+      if (hl) hl.href = 'https://johnmaxrin.github.io/hl-dark.css';
     }
   </script>
   
@@ -94,11 +94,11 @@
   <p class="error">
     404 Not Found
   </p>
-  <a class="instant" href="https://johnmaxrin.github.io/johnmaxrin">« back to home »</a>
+  <a class="instant" href="https://johnmaxrin.github.io">« back to home »</a>
 </div>
 
   
-  <script src="https://johnmaxrin.github.io/johnmaxrin/js/main.js"></script>
+  <script src="https://johnmaxrin.github.io/js/main.js"></script>
 </body>
 
 </html>
