--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
       </div>
     </section>
     <section id="brief" class="prose">
-      <p>I am a second-year M.S. student in the Department of Computer Science at IIT Madras, advised by  <a href="https://www.cse.iitm.ac.in/~rupesh/">Prof. Rupesh Nasre </a>. I work on high-performance compilers, code generation for distributed and heterogeneous computing.</p>
-<p>Beyond research, I enjoy <a href="">reading,</a> <a href="">photography,</a> playing the guitar, and solo cycling trips.</p>
+      <p>I am a second-year M.S. student in the Department of Computer Science at IIT Madras, advised by  <a href="https://www.cse.iitm.ac.in/~rupesh/">Prof. Rupesh Nasre </a>. I make writing code for supercomputers simpler and more efficient.</p>
+<p>Beyond research, I enjoy <a href="">reading</a> 📚 , <a href="">photography</a> 📷 , playing the guitar 🎸, and solo cycling 🚴.</p>
     </section>
     
   </main>
