deploy: d87c331d795e3eeba2351a557c5ed2e7667bc597

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
     </section>
     <section id="brief" class="prose">
-      <p>I am a second-year M.S. student in the Department of Computer Science at IIT Madras, advised by  <a href="https://www.cse.iitm.ac.in/~rupesh/">Prof. Rupesh Nasre </a>. I make writing code for supercomputers simpler and more efficient.</p>
+      <p>I am a second-year M.S. student in the Department of Computer Science at IIT Madras, advised by  <a href="https://www.cse.iitm.ac.in/~rupesh/">Prof. Rupesh Nasre </a>. I make writing code for supercomputers simpler and more efficient. <sup><a href="" > Know More </a> </sup></p>
 <p>Beyond research, I enjoy <a href="">reading</a> 📚 , <a href="">photography</a> 📷 , playing the guitar 🎸, and solo cycling 🚴.</p>
     </section>
     
