deploy: fa2f58c67c2923e85135d145eb1440884d67820b

--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,7 @@
     <div>
       
       <article class="prose">
-        <p>Hi, My name is ....</p>
+        <p>I'm Robert K Samuel. I work on compilers and help people write efficient code for supercomputers. I build tools using MLIR, LLVM, and occasionally argue with undefined behavior. I’m also into parallel programming and hardware design, because one core is never enough.</p>
 
       </article>
 
