deploy: 2d3d8b2663f67fbf2f06650084f3d17485207ed4

--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,8 @@
     <div>
       
       <article class="prose">
-        <p>I'm Robert K Samuel. I work on compilers and help people write efficient code for supercomputers. I build tools using MLIR, LLVM, and occasionally argue with undefined behavior. I’m also into parallel programming and hardware design, because one core is never enough.</p>
+        <p>I'm Robert K Samuel. I like building things: compilers, hardware, and everything in between. I work on generating efficient code and systems from high-level abstractions using LLVM and MLIR. I have also created several MLIR dialects, some for fun and some for research.</p>
+<p>I am interested in problems at the intersection of programming languages, hardware, and performance. I like exploring how far we can push code generation, from software to hardware.</p>
 
       </article>
 
