deploy: a97372b5da0388a6c13d704ca342721c3075e7bf

--- a/about/index.html
+++ b/about/index.html
@@ -115,7 +115,7 @@
   <h1>About</h1>
   
   
-  <p>I write about ....</p>
+  <p>Manjali · Thuvayoor · Manakala · Adoor · Elthuruth · Patturaikkal · Eastfort · Koovapally · Adyar · 600036</p>
   
 </div>
 
@@ -124,7 +124,7 @@
       
       <article class="prose">
         <p>I'm Robert K Samuel. I like building things: compilers, hardware, and everything in between. I work on generating efficient code and systems from high-level abstractions using LLVM and MLIR. I have also created several MLIR dialects, some for fun and some for research.</p>
-<p>I am interested in problems at the intersection of programming languages, hardware, and performance. I like exploring how far we can push code generation, from software to hardware.</p>
+<p>I am interested in problems at the intersection of programming languages, hardware, and performance. I like exploring how far we can push the art code generation.</p>
 
       </article>
 
