--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
     </section>
     <section id="brief" class="prose">
-      <p>I am a second-year M.S. student in the Department of Computer Science at IIT Madras, advised by  <a href="https://www.cse.iitm.ac.in/~rupesh/">Prof. Rupesh Nasre </a>. I make writing code for supercomputers simpler and more efficient. <sup><a href="" >Know More</a> </sup></p>
+      <p>I am a second-year M.S. student in the Department of Computer Science at IIT Madras, advised by  <a href="https://www.cse.iitm.ac.in/~rupesh/">Prof. Rupesh Nasre </a>. I make writing code for supercomputers simpler and more efficient. <sup><a href="/about/knwmore/" >Know More</a> </sup></p>
 <h2 id="education">Education</h2>
 
 
