deploy: 77e151670e3115399186beb1f970fc2c18fa8031

--- a/about/knwmore/index.html
+++ b/about/knwmore/index.html
@@ -184,7 +184,9 @@
 <p>This means DSL and compiler developers can focus on the <strong>semantics of their language</strong>, while DHIR handles the <strong>system-level concerns</strong> of mapping to distributed, heterogeneous machines.</p>
 <p>👉 You can find the code here: <a rel="nofollow noreferrer" href="https://github.com/johnmaxrin/avial">DHIR Repository</a></p>
 <h2 id="starplat-milr">StarPlat MILR</h2>
+<p>Working on it ...</p>
 <h2 id="debug-dialect">Debug Dialect</h2>
+<p>Working on it ...</p>
 
       </article>
 
