--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
   
   <meta name="description" content="About page of ...">
 
-  <title>About me</title>
+  <title>About</title>
   <link rel="icon" type="image/png" sizes="32x32" href="https://johnmaxrin.github.io/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="https://johnmaxrin.github.io/img/favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="https://johnmaxrin.github.io/img/apple-touch-icon.png">
@@ -123,8 +123,8 @@
     <div>
       
       <article class="prose">
-        <p>I like building things: compilers, hardware, and everything in between. I work on generating efficient code and systems from high-level abstractions using LLVM and MLIR. I have also created several MLIR dialects, some for fun and some for research.</p>
-<p>I am interested in problems at the intersection of programming languages, hardware, and performance. I like exploring how far we can push the art code generation.</p>
+        <p>I like building things that work and solve real problems. I enjoy exploring new ideas and creating something useful. My main interests are code and hardware generation, It's analysis, and optimization. I am also curious about quantum circuit generation and how it can expand the limits of computation.</p>
+<p>What matters most to me is building things that make a real impact in the world.</p>
 
       </article>
 
