deploy: 7de6de1c3444c8b88b53f575e3b56bc4335f32ec

--- a/about/index.html
+++ b/about/index.html
@@ -115,7 +115,7 @@
   <h1>About</h1>
   
   
-  <p>Manjali · Thuvayoor · Manakala · Adoor · Elthuruth · Patturaikkal · Eastfort · Koovapally · Adyar · 600036</p>
+  <p>Manjali · Thuvayoor · Manakala · Adoor · Elthuruth · Patturaikkal · Eastfort · Koovapally · Adyar · Taramani</p>
   
 </div>
 
