--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
     </section>
     <section id="brief" class="prose">
       <p>I am a second-year M.S. student in the Department of Computer Science at IIT Madras, advised by  <a href="https://www.cse.iitm.ac.in/~rupesh/">Prof. Rupesh Nasre </a>. I make writing code for supercomputers simpler and more efficient. <sup><a href="/about/knwmore/" >Know More</a> </sup></p>
+<p><code>Actively seeking PhD opportunities in computer science, focusing on compilers, high-performance computing, and quantum circuit generation.</code></p>
 <h2 id="education">Education</h2>
 
 
@@ -276,7 +277,7 @@
   
 
 </section>
-<h2 id="news">News</h2>
+<h2 id="blog">Blog</h2>
     </section>
     
     
