deploy: 4b4f187ccf25e4eb3495d4d68be0721d8ceaa644

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         </a>
         
         <a class="post instant " href="https:&#x2F;&#x2F;johnmaxrin.github.io&#x2F;posts&#x2F;musings-1&#x2F;">
-          <span>Some Stories Remain Unfinished and Eternally Beautiful 🕊️</span>
+          <span>Some Stories Remain Eternally Beautiful</span>
           <span class="line"></span>
           <span class="date">Apr 21, 2025</span>
         </a>
@@ -329,7 +329,7 @@
         </a>
         
         <a class="post instant " href="https:&#x2F;&#x2F;johnmaxrin.github.io&#x2F;posts&#x2F;arith2llvm&#x2F;">
-          <span>Code Transformations and Changing Rooms: An Unexpected Analogy</span>
+          <span>Code Transformations and Changing Rooms</span>
           <span class="line"></span>
           <span class="date">Mar 23, 2025</span>
         </a>
