--- a/projects/index.html
+++ b/projects/index.html
@@ -211,10 +211,7 @@
 <footer>
   <div class="left">
     <div class="copyright">
-      © 2025 Robert K Samuel
-      
-      <span>|</span>
-      Built with <a href="https://www.getzola.org" rel="noreferrer" target="_blank">zola</a> and <a href="https://github.com/isunjn/serene" rel="noreferrer" target="_blank">serene</a>
+      © 2025 Robert K Samuel | Last Updated on Nov 2025
       
     </div>
   </div>
